# picyboo-public-msa

./: .gitignore  README.md  pyproject.toml
docs/: primer.md  research_landscape.md
examples/: run_demo.py
experiments/: README.md
experiments/synthetic_forgetting/: run_pipeline.py
msa_reference/: __init__.py  core.py  metrics.py  simulation.py  subsystems.py
submodules/: README.md
