[project]
name = "msa-reference"
version = "0.1.0"
description = "Reference prototype for the Meta Synthetic Architecture"
authors = [{name = "Halenta Research"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
